Semantic check of section 1, fixed figure nomenclature

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -1,10 +1,10 @@
-@article{ShannonEntropy,
+@article{Shannon,
     author = {Claude Shannon},
     title = {A mathematical theory of communication},
     journal = {Bell System Technical Journal},
     year = {1948},
     volume = {27},
-    pages = {397-423, 623-656}
+    pages = {397-423, 623-656},
 }
 
 @article{Huffman,
@@ -13,4 +13,14 @@
     journal = {Proceeding of I.R.E.},
     year = {1952},
     pages = {1092-1102}
+}
+
+@article{Elias,
+    author = {Peter Elias},
+    title = {Universal codewords sets and representation of the Integers},
+    journal = {IEEE Transaction of Information Theory},
+    month = {March},
+    year = {1975},
+    volume = {21},
+    pages = {194-203}
 }
