--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -1,13 +1,14 @@
 \documentclass[moon, colormath]{lectures2}
 
 \addbibresource{../extra/Bib/papers.bib}
+
 \makeglossaries
 \newacronym{ud}{UD}{uniquely decodable codes}
 \newacronym{acl}{ACL}{average code length}
 \newacronym{ac}{AC}{aritmethic coding}
-\begin{document}
-    \maketitle{Information theory notes}{Riccardo Lo Iacono}{Unipa}
 
+\begin{document}
+    \maketitle{Information Theory notes}{Riccardo Lo Iacono}{Unipa}
     \section{Basics of information theory}
     \subfile{../sections/simple/1 - Basics of IT}
 
@@ -16,6 +17,9 @@
 
     \section{Aritmethic coding}
     \subfile{../sections/simple/3 - Aritmethic coding}
+
+    \section{Integers encoding}
+    \subfile{../sections/simple/4 - Integer encoding}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
