--- a/Information Theory/sections/simple/1 - Basics of IT.tex
+++ b/Information Theory/sections/simple/1 - Basics of IT.tex
@@ -1,16 +1,16 @@
 \documentclass{subfiles}
 \begin{document}
     Information theory, alongside data compression,
-        have a key role in modern CS. 
-        The former defines a set of theoretical tools,
-        usefull to understand the limitations of what is computable;
+        has a key role in modern computer science. 
+        The former defines a set of theoretical tools useful, 
+        among other things, to understand the limitations of what is computable;
         the latter allows to reduce the amount of space required (in terms of bits)
         without losing information.
 
     \subsection{Shannon's Entropy}\label{Sec:1.1}
-    \subfile{../sub/1.1 - Shannon's entropy}
+    \subfile{../sub/1.1 - Shannon entropy}
 
-    \subsection[Encoding of a source]{Encoding of a source and Sardinas-Patterson algorithm}
+    \subsection[Encoding of a source]{Source encoding and Sardinas-Patterson algorithm}
     \subfile{../sub/1.2 - Codes and Sardinas-Patterson algorithm}
 
     \subsection{Average code length and Kraft inequality}
