--- a/Information Theory/sections/simple/2 - Huffman encoding.tex
+++ b/Information Theory/sections/simple/2 - Huffman encoding.tex
@@ -1,5 +1,5 @@
 \documentclass{subfiles}
-\begin{document}
+\begin{document}\label{Sec:2}
     The first to solve the problem of creating optimal code was \emph{D.A. Huffman},
        who in \cite{Huffman} provides a method to create compact codes.
 
@@ -18,7 +18,7 @@
                    p_{i} \ge p_{j} \implies \Abs{c_{i}} \le \Abs{c_{j}}
                 \]
                 If this was not the case, 
-                swapping the codewords would result in a code with lower \gls{acl}.
+                swapping the codewords would result in a code with a lower \gls{acl}.
 
             \item The least probable symbols have codewords with the same length.
             \item The longest codewords differ only by the last symbol.
