--- a/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
+++ b/Information Theory/sections/sub/1.2 - Codes and Sardinas-Patterson algorithm.tex
@@ -1,11 +1,13 @@
-\documentclass{subfiles} \begin{document}
+\documentclass{subfiles} 
+\begin{document}
     Let's now focus our attention onto the source itself.
     In general, the alphabet these use may not be suitable for transmission,
-        for some reason or another.
-    For this particular reason, an \emph{encoder} is used to convert the source alphabet,
+        for some reason or another. For this particular reason, 
+        an \emph{encoder} is used to convert the source alphabet,
         to a new one, which is more suitable for transmission.
-    On the recieving side, a \emph{decoder} is used to convert back to the original alphabet.
-    This process is called \emph{source encoding/decoding}.
+        On the recieving side, 
+        a \emph{decoder} is used to convert back to the original alphabet.
+        This process is called \emph{source encoding/decoding}.
 
     Formally, given a source \(S\) defined on some alphabet, 
         and \(X\) a new alphabet, called \emph{input alphabet}, 
@@ -13,24 +15,23 @@
         to sequences of symbols in \(X\). 
         A sequence of symbols in \(X\) is called a \emph{codeword}.
 
-    Before we consider any specific type of \emph{code},
+    Before we consider any particular \emph{code},
         let us consider the general case. 
-    Let's \(C\) be a generic mapping from a source \(S\) to some new alphabet \(X\).
-    Since we have not imposed any condition on \(C\), 
+        Let's \(C\) be a generic mapping from a source \(S\) to some new alphabet \(X\).
+        Since we have imposed no condition on \(C\), 
         one may define it in such a way that two, or more,
         source symbols share the same codeword.
-    It easy to observe that, in doing so,
+        It easy to observe that, in doing so,
         the decoded message may not be correct or even unique.
-
 
     \begin{example*}
         Let's consider the code shown below.
-        \subfile{../../extra/TikZ/Example - Non non-singular codes}
+        \subfile{../../extra/TikZ/Figure * - Example of non non-singular codes}
         How should we decode the text 000111? 
             We have two possibilities: 
                 either as \(s_{1}s_{1}s_{3}s_{2}\) or as \(s_{1}s_{1}s_{3}s_{4}\).
         As said before, the decoded message might not be unique. 
-        Also, unless the context is given, there's no way to know which one is correct.
+        Also, unless context is given, there's no way to know which one is correct.
     \end{example*}
 
     From the above example, we can conclude that a ``good'' code must encode each 
