--- a/Information Theory/sections/sub/2.2 - Canonical Huffman.tex
+++ b/Information Theory/sections/sub/2.2 - Canonical Huffman.tex
@@ -11,7 +11,7 @@
         that are not produced by the Huffman algorithm.
         We now introduce the so called \emph{Canonical Huffman encoding},
         which is a variant of Huffman, 
-        that solves the issues above by requiring the encoder to just transmit the lengtht of the codewords.
+        that solves the issues above by requiring the encoder to transmit the lengthts of the codewords.
 
     Such new encoding, comes in handy when the source alphabet is large, 
         and a fast decoding is mandatory.
