--- a/Information Theory/sections/sub/3.3 - Adaptive AC.tex
+++ b/Information Theory/sections/sub/3.3 - Adaptive AC.tex
@@ -23,12 +23,13 @@
         \(p_{a} = \tfrac{1}{2}, p_{b} = p_{c} = \tfrac{1}{4}\).
         We repeat the same process until the end of the text,
             and encode \(\omega\) as \([\tfrac{43}{180}, \tfrac{11}{45}]\).
-        \subfile{../../extra/TikZ/Figure 6 - Adaptive AC encoding}
+        \subfile{../../extra/TikZ/Figure 5 - Adaptive AC encoding}
 
         Let's now decode \(0.2416\), with \(n = 4\).
         Again we assume equality in the probabilities, 
             and thus, we decode (\(a\)) and update the probabilities.
             Repeating the process, we decode the text \(abcb\).
-        \subfile{../../extra/TikZ/Figure 7 - Adaptive AC decoding}
+        \subfile{../../extra/TikZ/Figure 6 - Adaptive AC decoding}
     \end{example*}
+    \clearpage
 \end{document}
