--- a/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
+++ b/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
@@ -12,7 +12,7 @@
         \begin{enumerate}
             \item \(H\) must be a continuos function of the probabilities.
                 Meaning that if \(H(S) = \Entropy{p_{1}, \ldots, p_{n}}\), 
-                then \(H\) is continuos in [0, 1].
+                then \(H\) is continuous in [0, 1].
 
             \item \(\Entropy[2]{\tfrac{1}{2}, \tfrac{1}{2}} = 1\).
 
@@ -42,7 +42,7 @@
        \end{enumerate}
     \end{axiom*} 
 
-    \begin{theorem*}[Theorem 2, \cite{ShannonEntropy}]
+    \begin{theorem*}[Theorem 2, \cite{Shannon}]
         The only function \(H\) that satisfies the above axioms,
         has the form of \emph{Equation \eqref{Eq:1}}.
     \end{theorem*}
@@ -102,7 +102,7 @@
                         (1 - p) \log_{b} (1 - p) + p \log_{b} p
                     \right\rbrack.
                 \]
-                Also, since \(\Q \text{ is dense in } \R\) and \(H\) is continuos,
+                Also, since \(\Q \text{ is dense in } \R\) and \(H\) is continuous,
                 we can extend what above to any \(p \in \R\).
 
             \item Lastly, \emph{Equation \eqref{Eq:1}} can be easily proved to hold,
@@ -111,5 +111,5 @@
         \end{enumerate}
     \end{proof*}
     The proof we provide is berely a sketch.
-    See \cite{ShannonEntropy} (\emph{Appendix 2}) for a detailed proof.
+    See \cite{Shannon} (\emph{Appendix 2}) for a detailed proof.
 \end{document}
