--- a/Information Theory/sections/subsub/1.2.1 - UD codes.tex
+++ b/Information Theory/sections/subsub/1.2.1 - UD codes.tex
@@ -2,11 +2,11 @@
 \begin{document}
     One may think that non-singular codes are enough, 
         but in most cases they are not.
-    In fact, it might happen that a codeword is prefix of another,
+        In fact, it might happen that a codeword is prefix of another,
         making the decode process tedious.
     \begin{example*}
         Let's consider the following codes.
-        \subfile{../../extra/TikZ/Example - Non singular codes}
+        \subfile{../../extra/TikZ/Figure * - Example of non singular codes}
         How should we decode the string 000111? 
         Once again, we have many possibilities:
             for example \(s_{1}s_{1}s_{3}s_{2}s_{2}\) or \(s_{1}s_{1}s_{3}s_{4}\).
@@ -14,12 +14,12 @@
     \end{example*}
     We say that a code is \gls{ud} if and only each sequence of codewords
         corresponds to at most one sequence of source symbols.
-    
-    From this definition, two questions follow:
-    \begin{itemize}
-        \item How we construct such codes?
-        \item How can we check whether a given code is \gls{ud} or not?
-    \end{itemize}
+        From this definition, two questions follow:
+        \begin{itemize}
+            \item How we construct such codes?
+            \item How can we check whether a given code is \gls{ud} or not?
+        \end{itemize}
 
-    The next section focus on the second question, we'll then answer the first.
+    The next section focus on the second question, 
+        \emph{Section \ref{Sec:2}-\ref{Sec:4}} will be focused on the construction of \gls{ud} codes.
 \end{document}
