--- a/Information Theory/sections/subsub/1.2.3 - Prefix codes.tex
+++ b/Information Theory/sections/subsub/1.2.3 - Prefix codes.tex
@@ -8,7 +8,7 @@
     Then what's the issue? 
     Essentially, even though to each source symbol is assigned a distinct codeword,
     these are not prefix-free, meaning that some of the codewords are prefix of others
-    (\textbf{eg.} the codeword for \(s_{1}\) is prefix of the codeword for \(s_{3}\)).
+    (eg. the codeword for \(s_{1}\) is prefix of the codeword for \(s_{3}\)).
     From what just stated, a natural solution to the problem is to define codes 
     that are prefix-free.
         One can also prove that, prefix-free (or simply prefix) codes are also instataneous (each 
