--- a/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
+++ b/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
@@ -18,8 +18,8 @@
         Let's assume the alphabet \(\Set{a, b, c, d, e}\) whose probabilities are
             \(\Set{\tfrac{1}{2}, \tfrac{1}{4}, \tfrac{1}{8},
                 \tfrac{1}{16}, \tfrac{1}{16}}\). 
-            Applying the steps above we get the following. 
-            \subfile{../../extra/TikZ/Example - SF encoding}
+            Applying the steps above we get the codes shown in the table below. 
+            \subfile{../../extra/TikZ/Tab * - Example of SF encoding}
     \end{example*}
     One can prove that Shannon-Fano encoding is not optimal.
     \clearpage
