--- a/Information Theory/sections/subsub/2.1.1 - Huffman encoding.tex
+++ b/Information Theory/sections/subsub/2.1.1 - Huffman encoding.tex
@@ -41,7 +41,7 @@
                     the other choice is shown in \emph{Figure \ref{Fig:2.b}}.
                     Lastly, we merge the last two symbols, 
                     leading to the tree in \emph{Figure \ref{Fig:2.a}}.
-                    \subfile{../../extra/TikZ/Figure 2 - Example Huffman encoding}
+                    \subfile{../../extra/TikZ/Figure 1 - Example of Huffman encoding}
 
                 \item [\textbf{Step 3.}] Traversing the tree we get 
                     \(C = \Set{0, 10, 110, 1110, 1111}\) for tree in 
