--- a/Information Theory/sections/subsub/2.1.2 - Huffman decoding.tex
+++ b/Information Theory/sections/subsub/2.1.2 - Huffman decoding.tex
@@ -1,7 +1,7 @@
 \documentclass{subfiles}
 \begin{document}
     Let's assume we recieve a text encoded using Huffman, how do we decode it?
-    We remark that to decode the text we need to know either the Huffman tree, 
+    We shall remark that to decode the text we need to know either the Huffman tree, 
         or the source probabilities, which represent in both cases an overhead
         to the bare encoding.
     Assuming that such overhead is know, the decoding is immediate.
