--- a/Information Theory/sections/subsub/2.2.1 - Canonical Huffman encoding.tex
+++ b/Information Theory/sections/subsub/2.2.1 - Canonical Huffman encoding.tex
@@ -21,7 +21,7 @@
                 \note{The snippet shown uses a reverse approach, 
                 which usually produces codewords that differ from those 
                 built via a forward approach.}
-                \subfile{../../extra/TikZ/Example - Canonical Huffman encoding.tex}
+                \subfile{../../extra/TikZ/Figure * - Example of Canonical Huffman encoding.tex}
 
             \item Assign consecutive codewords to the symbols in \lstinline{symb[l]}
                 starting from \lstinline{symb[l]}.
