Fixed Bib, added exercises for Sec. 3 and 4.

--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -1,11 +1,13 @@
 \documentclass[moon, colormath]{lectures2}
 
 \addbibresource{../extra/Bib/papers.bib}
+\addbibresource{../extra/Bib/reports.bib}
 
 \makeglossaries
 \newacronym{ud}{UD}{uniquely decodable codes}
 \newacronym{acl}{ACL}{average code length}
 \newacronym{ac}{AC}{aritmethic coding}
+% \newacronym{bwt}{BWT}{Burrows-Wheeler Transform}
 
 \begin{document}
     \maketitle{Information Theory notes}{Riccardo Lo Iacono}{Unipa}
@@ -20,6 +22,9 @@
 
     \section{Integers encoding}
     \subfile{../sections/simple/4 - Integer encoding}
+
+    % \section{Compression optimization}
+    % \subfile{../sections/simple/5 - Compression optimization}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
