--- a/Information Theory/sections/simple/2 - Huffman encoding.tex
+++ b/Information Theory/sections/simple/2 - Huffman encoding.tex
@@ -1,7 +1,7 @@
 \documentclass{subfiles}
 \begin{document}\label{Sec:2}
     The first to solve the problem of creating optimal code was \emph{D.A. Huffman},
-       who in \cite{Huffman} provides a method to create compact codes.
+       who in \cite{huffman1952} provides a method to create compact codes.
 
         Before we actually analyze such method, 
             it's of intrest to point out some properties that optimal codes 
