--- a/Information Theory/sections/simple/3 - Aritmethic coding.tex
+++ b/Information Theory/sections/simple/3 - Aritmethic coding.tex
@@ -32,4 +32,7 @@
 
         \subsection{The adaptive version}
         \subfile{../sub/3.3 - Adaptive AC}
+
+        \subsection{Exercises}
+        \subfile{../sub/3.4 - AC exercises}
 \end{document}
