--- a/Information Theory/sections/simple/4 - Integer encoding.tex
+++ b/Information Theory/sections/simple/4 - Integer encoding.tex
@@ -14,7 +14,7 @@
     \begin{remark*}
         We can relax the constrain on the positiveness, 
             by mapping any positive integers \(x \text{ to } 2x + 1\) and 
-            any negative integers \(y \text{to} -2y\).
+            any negative integers \(y \text{ to} -2y\).
     \end{remark*}
 
     \subsection{Simple approaches}
@@ -25,4 +25,7 @@
 
     \subsection{Fibonacci code}
     \subfile{../sub/4.3 - Fibonacci code}
+
+    \subsection{Exercises}
+    \subfile{../sub/4.4 - IE exercises}
 \end{document}
