--- a/Information Theory/sections/sub/1.1 - Shannon entropy.tex
+++ b/Information Theory/sections/sub/1.1 - Shannon entropy.tex
@@ -6,7 +6,7 @@
 
     The first to answer these questions was \emph{Claude Shannon}, 
         by many condsidered the father of information theory.
-    In \cite{Shannon} Shannon analizes various communication systems:
+    In \cite{shannon1948} Shannon analizes various communication systems:
         from the discrete noiceless one to the continous noisy one.
         A general structure of these systems is shown below.
         \subfile{../../extra/TikZ/Figure * - Communication system structure.tex}
