--- a/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
+++ b/Information Theory/sections/subsub/1.1.1 - Entropy axiomatically defined.tex
@@ -42,7 +42,7 @@
        \end{enumerate}
     \end{axiom*} 
 
-    \begin{theorem*}[Theorem 2, \cite{Shannon}]
+    \begin{theorem*}[Theorem 2, \cite{shannon1948}]
         The only function \(H\) that satisfies the above axioms,
         has the form of \emph{Equation \eqref{Eq:1}}.
     \end{theorem*}
@@ -111,5 +111,5 @@
         \end{enumerate}
     \end{proof*}
     The proof we provide is berely a sketch.
-    See \cite{Shannon} (\emph{Appendix 2}) for a detailed proof.
+    See \cite{shannon1948} (\emph{Appendix 2}) for a detailed proof.
 \end{document}
