--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -1,26 +1,29 @@
-@article{Shannon,
-    author = {Claude Shannon},
-    title = {A mathematical theory of communication},
-    journal = {Bell System Technical Journal},
-    year = {1948},
-    volume = {27},
-    pages = {397-423, 623-656},
+@article{shannon1948,
+  title   = {A Mathematical Theory of Communication},
+  author  = {Shannon, Claude E.},
+  journal = {Bell System Technical Journal},
+  volume  = {27},
+  number  = {3},
+  pages   = {379--423},
+  year    = {1948},
+}
+@article{huffman1952,
+  title   = {A Method for the Construction of Minimum-Redundancy Codes},
+  author  = {Huffman, David A.},
+  journal = {Proceedings of the IRE},
+  volume  = {40},
+  number  = {9},
+  pages   = {1098--1101},
+  year    = {1952},
 }
 
-@article{Huffman,
-    author = {David A. Huffman},
-    title = {A method for the construction of minimum-redundancy codes},
-    journal = {Proceeding of I.R.E.},
-    year = {1952},
-    pages = {1092-1102}
-}
 
-@article{Elias,
-    author = {Peter Elias},
-    title = {Universal codewords sets and representation of the Integers},
-    journal = {IEEE Transaction of Information Theory},
-    month = {March},
-    year = {1975},
-    volume = {21},
-    pages = {194-203}
+@article{elias1975,
+  title   = {Universal Codeword Sets and Representations of the Integers},
+  author  = {Elias, Peter},
+  journal = {IEEE Transactions on Information Theory},
+  volume  = {21},
+  number  = {2},
+  pages   = {194--203},
+  year    = {1975},
 }
