--- a/Information Theory/sections/sub/4.2 - Elias codes.tex
+++ b/Information Theory/sections/sub/4.2 - Elias codes.tex
@@ -2,15 +2,13 @@
 \begin{document}
     When we talk about Elias code we refer, generally, 
         to two codes (the \emph{gamma} code and the \emph{delta} code),
-        proposed by \emph{Peter Elias}\footnotemark[2] in \cite{Elias}.
+        proposed by \emph{Peter Elias} in \cite{elias1975}.
 
     Before we start talking about the codes,
         let us define some notation useful to understand what follows.
         Let \(x \text{ be an Integer, and let } B(x)\) be its binary representation.
         We define \(\Abs{B(x)}\) as the number of bits needed to represent \(x\).
         \note{One can also think of \(\Abs{B(x)}\) as the length of \(B(x)\)}
-
-        \footnotetext[2]{He was a colleague of Shannon's, and also one of Fano's students.}
 
     \subsubsection{Gamma code}
     \subfile{../subsub/4.2.1 - Gamma code}
