Completed section 5, fixed the Bib files

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -1,29 +1,39 @@
 @article{shannon1948,
-  title   = {A Mathematical Theory of Communication},
-  author  = {Shannon, Claude E.},
-  journal = {Bell System Technical Journal},
-  volume  = {27},
-  number  = {3},
-  pages   = {379--423},
-  year    = {1948},
+    title   = {A Mathematical Theory of Communication},
+    author  = {Shannon, Claude E.},
+    journal = {Bell System Technical Journal},
+    volume  = {27},
+    number  = {3},
+    pages   = {379--423},
+    year    = {1948}
 }
 @article{huffman1952,
-  title   = {A Method for the Construction of Minimum-Redundancy Codes},
-  author  = {Huffman, David A.},
-  journal = {Proceedings of the IRE},
-  volume  = {40},
-  number  = {9},
-  pages   = {1098--1101},
-  year    = {1952},
+    title   = {A Method for the Construction of Minimum-Redundancy Codes},
+    author  = {Huffman, David A.},
+    journal = {Proceedings of the IRE},
+    volume  = {40},
+    number  = {9},
+    pages   = {1098--1101},
+    year    = {1952}
 }
 
 
 @article{elias1975,
-  title   = {Universal Codeword Sets and Representations of the Integers},
-  author  = {Elias, Peter},
-  journal = {IEEE Transactions on Information Theory},
-  volume  = {21},
-  number  = {2},
-  pages   = {194--203},
-  year    = {1975},
+    title   = {Universal Codeword Sets and Representations of the Integers},
+    author  = {Elias, Peter},
+    journal = {IEEE Transactions on Information Theory},
+    volume  = {21},
+    number  = {2},
+    pages   = {194--203},
+    year    = {1975}
+}
+
+@article{manzini2001,
+    title   = {An analysis of the Burrows-Wheeler Transform},
+    author  = {Manzini, G},
+    journal = {Journal of the ACM},
+    volume  = {48},
+    number  = {3},
+    pages   = {407--430},
+    year    = {2001}
 }
