--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -7,10 +7,11 @@
 \newacronym{ud}{UD}{uniquely decodable codes}
 \newacronym{acl}{ACL}{average code length}
 \newacronym{ac}{AC}{aritmethic coding}
-% \newacronym{bwt}{BWT}{Burrows-Wheeler Transform}
+\newacronym{bwt}{BWT}{Burrows-Wheeler Transform}
 
 \begin{document}
     \maketitle{Information Theory notes}{Riccardo Lo Iacono}{Unipa}
+
     \section{Basics of information theory}
     \subfile{../sections/simple/1 - Basics of IT}
 
@@ -23,8 +24,8 @@
     \section{Integers encoding}
     \subfile{../sections/simple/4 - Integer encoding}
 
-    % \section{Compression optimization}
-    % \subfile{../sections/simple/5 - Compression optimization}
+    \section{Compression optimization}
+    \subfile{../sections/simple/5 - Compression optimization}
     \clearpage\printbibliography
     \clearpage\printglossaries
 \end{document}
